<resources>
    <string name="app_name">Travie</string>
    <string name="logo">Logo</string>
    <string name="glad_to_see_you_back">Glad to see you back</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="dont_have_an_account">Don\'t have an account? Sign up</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="track">Track</string>
    <string name="safely_spend">Safely Spend</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="other">Other</string>
    <string name="no_photos_or_notes">You haven\'t added any photos or notes to this transaction yet. Add them below.</string>
    <string name="citi_rewards">Citi Rewards Signature Credit Card</string>
    <string name="recategorise">Recategorise</string>
    <string name="more">More</string>
    <string name="retry">Retry</string>
</resources>
