<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_track"
        android:enabled="true"
        android:icon="@drawable/ic_assessment_black_24dp"
        android:title="@string/track"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_safely_spend"
        android:enabled="true"
        android:icon="@drawable/ic_monetization_on_black_24dp"
        android:title="@string/safely_spend"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_notifications"
        android:enabled="true"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notifications"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>