<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/under_logo_text_margin"
        android:layout_weight="1"
        android:text="@string/glad_to_see_you_back"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/under_logo_text_size"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/startSignIn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sign_in_height"
        android:layout_marginBottom="@dimen/sign_in_bottom_margin"
        android:layout_marginEnd="@dimen/sign_in_side_margin"
        android:layout_marginStart="@dimen/sign_in_side_margin"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:theme="@style/PrimaryButton"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/dontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/have_account_height"
        android:gravity="center"
        android:text="@string/dont_have_an_account"/>

</LinearLayout>
