<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0000000">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        android:background="@drawable/detail_background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/detailsLogo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_logo"/>

        <TextView
            android:id="@+id/detailsPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/detailsLogo"
            android:paddingEnd="@dimen/standard_margin"
            android:textColor="@color/primaryTextColor"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:text="$27.50"/>

        <TextView
            android:id="@+id/detailsDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/detailsPrice"
            android:paddingEnd="@dimen/standard_margin"
            android:textColor="@color/primaryTextColor"
            android:textSize="16sp"
            tools:text="10 Jan"/>

        <View
            android:id="@+id/detailsDivider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/detailsDate"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:background="@color/lighterGray"/>

        <TextView
            android:id="@+id/detailsCategory1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detailsDivider1"
            android:layout_marginStart="@dimen/standard_margin"
            android:background="@drawable/category_button"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/primaryTextColor"
            tools:text="Food &amp; Drinks"/>

        <TextView
            android:id="@+id/detailsCategory2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detailsDivider1"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_toEndOf="@id/detailsCategory1"
            android:background="@drawable/category_button"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@android:color/black"
            android:visibility="gone"
            tools:text="Other Food &amp; Drinks"/>

        <TextView
            android:id="@+id/detailsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detailsCategory1"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="10dp"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Cbd Noodles Sydney Au"/>

        <TextView
            android:id="@+id/details_no_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detailsTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:background="#fbfbfb"
            android:gravity="center"
            android:paddingBottom="28dp"
            android:paddingEnd="48dp"
            android:paddingStart="48dp"
            android:paddingTop="28dp"
            android:text="@string/no_photos_or_notes"
            android:textColor="@color/primaryTextColor"/>

        <TextView
            android:id="@+id/detailsCiti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/details_no_photo"
            android:layout_margin="@dimen/standard_margin"
            android:text="@string/citi_rewards"
            android:textColor="@color/primaryTextColor"/>

        <View
            android:id="@+id/detailsDivider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/detailsCiti"
            android:layout_marginBottom="@dimen/standard_margin"
            android:background="@color/lighterGray"/>

        <ImageView
            android:id="@+id/detailsSearchIcon"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:layout_below="@id/detailsDivider2"
            android:layout_centerHorizontal="true"
            android:background="@drawable/circle_button"
            android:padding="4dp"
            android:src="@drawable/ic_search_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detailsSearchIcon"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/standard_margin"
            android:gravity="center"
            android:text="Search on\nweb"
            android:textColor="@color/primaryTextColor"/>

        <ImageView
            android:id="@+id/detailsRecategoriseIcon"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:layout_below="@id/detailsDivider2"
            android:layout_marginEnd="40dp"
            android:layout_toStartOf="@id/detailsSearchIcon"
            android:background="@drawable/circle_button"
            android:padding="4dp"
            android:src="@drawable/ic_apps_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detailsRecategoriseIcon"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@id/detailsSearchIcon"
            android:text="@string/recategorise"
            android:textColor="@color/primaryTextColor"/>

        <ImageView
            android:id="@+id/detailsMoreIcon"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:layout_below="@id/detailsDivider2"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@id/detailsSearchIcon"
            android:background="@drawable/circle_button"
            android:padding="4dp"
            android:src="@drawable/ic_more_horiz_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detailsRecategoriseIcon"
            android:layout_marginStart="50dp"
            android:layout_toEndOf="@id/detailsSearchIcon"
            android:text="@string/more"
            android:textColor="@color/primaryTextColor"/>

    </RelativeLayout>

</FrameLayout>